<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_margin"
        >

        <TextView
            android:id="@+id/staffqr_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Scan_staff_qr"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/comp_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comp_qr"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/sent_to_sever_n_compare "
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sent_to_sever_n_compare"
            android:layout_gravity="bottom"></Button>


    </LinearLayout>



</ScrollView>
