<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_margin"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_margin="@dimen/logo_margin"
            android:layout_gravity="center"

            />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/sign_margin"


        >


        <Button
            android:id="@+id/signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_gravity="center"
            />


        <Button
            android:id="@+id/signout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signout"
            android:layout_gravity="center"

            />

        <Button
            android:id="@+id/logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="bottom"

            />
    </LinearLayout>














    </LinearLayout>



</ScrollView>
