<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_margin="@dimen/logo_margin"
        android:layout_gravity="center"
     />
    <TextView
        android:id="@+id/username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="left"/>
    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="left"/>
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        />

<Button
    android:id="@+id/log_In_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:layout_gravity="center"
    />

</LinearLayout>



    </ScrollView>
